# chrome-safari-bookmarks-sync

./: .gitignore  AUDIT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  chrome_to_safari.py  install_launch_agent.sh  pyproject.toml  sync_bookmarks.sh  uninstall_launch_agent.sh
.github/workflows/: test.yml
tests/: test_chrome_to_safari.py
