[project]
name = "chrome-safari-bookmarks-sync"
version = "0.1.0"
description = "Conservative bidirectional bookmark sync between Google Chrome and Safari on macOS."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ForestofTime" }]
keywords = ["macos", "chrome", "safari", "bookmarks", "sync"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]

[project.scripts]
chrome-safari-bookmarks-sync = "chrome_to_safari:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
