[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrome-safari-bookmarks-sync"
version = "0.2.0"
description = "Conservative bidirectional bookmark sync between Google Chrome and Safari on macOS."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ForestofTime" }]
keywords = ["macos", "chrome", "safari", "bookmarks", "sync"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]

[project.scripts]
chrome-safari-bookmarks-sync = "chrome_to_safari:main"

[tool.setuptools]
py-modules = ["chrome_to_safari"]

[tool.pytest.ini_options]
testpaths = ["tests"]
